# hri_controller

./: CMakeLists.txt  README.md
data/: it1_pt65.txt  it1_pt7.txt  it1_pt75.txt  it1_pt8.txt  it1_pt85.txt  it1_pt9.txt  it1_pt95.txt  it1_sec1.txt  it1_sec1_pt5.txt  it1_sec2.txt  it1_sec2_pt5.txt  it1_sec3.txt  it1_sec4.txt  it2_pt55.txt  it2_pt65.txt  it2_pt75.txt  it2_pt8.txt  it2_pt85.txt  it2_pt9.txt  it2_pt95.txt  it2_sec1.txt  it2_sec1_pt5.txt  it2_sec2.txt  it2_sec2_pt5.txt  it2_sec3.txt  it2_sec4.txt  it3_pt45.txt  it3_pt5.txt  it3_pt55.txt  it3_pt6.txt  it3_pt65.txt  it3_pt7.txt  it3_pt75.txt  it3_pt8.txt  it3_pt85.txt  it3_pt9.txt  it3_pt95.txt  it3_sec1.txt  it3_sec1_pt5.txt  it3_sec2.txt  (+130 more)
etc/: mc_rtc.conf
launch/: display.rviz  hri1.launch.in  hri1_control.launch.in  hri1_display.launch.in
src/: CMakeLists.txt  datapath.h.in  mc_hri1_controller.cpp  mc_hri1_controller.h  min_jerk_traj.cpp  min_jerk_traj.h
